# Group-Chat-Room

./: CMakeLists.txt  LICENSE  README.md
python_clients/: bot.py
results/: benchmark_results.csv
scripts/: benchmark.sh  start_clients.sh
src/: client.cpp  server.cpp
